# rs-utils

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.agents/skills/rust-best-practices/: SKILL.md
.github/: dependabot.yml
.github/skills/agent-syntax/: SKILL.md
.github/workflows/: coverage.yml  release-plz.yml
src/: cockroach_utils.rs  crypto_box.rs  e2e_crypto.rs  json_utils.rs  lib.rs  prompt_utils.rs  sst_resources.rs  stoplist.rs  token_map.rs  validation_utils.rs  vehicle_utils.rs
src/tools/: generate_keypair.rs
src/tools/token_codegen/: Cargo.toml
src/tools/token_codegen/data/: critical_tokens.csv  soft_tokens.csv  stoplist.csv
src/tools/token_codegen/src/: main.rs
