[package]
name = "rs-utils"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate_keypair"
path = "src/tools/generate_keypair.rs"

[dependencies]
anyhow = "1.0.102"
aws-sdk-dynamodb = "1.108.0"
aws_lambda_events = { version = "1.1.1", default-features = false, features = [
    "apigw",
    "sqs",
] }
chrono = "0.4.44"
base64 = "0.22.1"
hex = "0.4.3"
jsonwebtoken = "10.3.0"
lambda_http = "1.1.1"
lambda_runtime = "1.1.1"
openssl = { version = "0.10.76", features = ["vendored"] }
phf = "0.13.1"
postgres = "0.19.12"
postgres-openssl = "0.5.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sodiumoxide = "0.2.7"
thiserror = "2.0.18"
aes-gcm = "0.10"
getrandom = { version = "0.4.2", features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1.25"
utoipa = "5.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
