[package]
name = "rs-utils"
version = "0.1.2"
edition = "2024"
publish = false

[[bin]]
name = "generate_keypair"
path = "src/tools/generate_keypair.rs"

[dependencies]
anyhow = "1.0.103"
aws-sdk-dynamodb = "1.117.0"
aws_lambda_events = { version = "1.2.0", default-features = false, features = [
    "apigw",
    "sqs",
] }
chrono = "0.4.45"
base64 = "0.22.1"
getrandom = { version = "0.4.3", features = ["std"] }
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
lambda_http = "1.3.0"
lambda_runtime = "1.3.0"
openssl = { version = "0.10.81", features = ["vendored"] }
phf = "0.14.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["json"] }
rust-s3 = "0.37.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
aes-gcm = "0.11.0"
hkdf = "0.13"
sha2 = "0.11"
x25519-dalek = { version =" 3.0.0", features = ["static_secrets"] }
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1.25"
utoipa = "5.5.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
# SST resource types
sst = []
# Serde + AWS response helpers
json = []
# JWT validation helpers
jwt = []
# AI prompt validation helpers
ai = []
# Vehicle rule engine
vehicle = []
# End-to-end encryption helpers
e2e = []
# Crypto helpers
crypto = []
# Default features
default = ["sst", "json", "jwt", "ai", "vehicle", "e2e", "crypto"]